# cloudflare_ddnsv6_forZTE_F50

./: .gitignore  README.md  ddnsv6.sh  login.py  main.py  pyproject.toml
.github/workflows/: pack.yml  releases.yml
