[project]
name = "cloudflare-ddnsv6"
version = "0.1.3"
description = "A tool to update Cloudflare DNS records with IPv6 addresses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "cloudflare>=4.1.0",
    "pyinstaller>=6.13.0",
    "requests>=2.32.3",
    "socksio>=1.0.0",
]
